# Nautilus

./: Cargo.toml
.github/workflows/: python_ffi.yml  rust.yml
benches/: Nautilus-Benchmark-Analysis.ipynb
core/src/traits/: api_trait.rs  mod.rs
identity/benches/: benchmark.rs
identity/benches/pki_benchmark/: keypair_exchange_benchmark.rs
identity/src/pki/: falcon_keypair.rs  spincs_keypair.rs
identity/tests/: falcon_test.rs  rsa_test.rs
protocols/handshake/: README.md
protocols/kad/: README.md
protocols/mdns/: README.md
protocols/mdns/examples/: mdns_example.rs
protocols/mdns/src/: behaviour.rs
protocols/mdns/src/behaviour/: back_off.rs  mdns_service.rs
protocols/mdns/tests/: mdns_service_tests.rs
protocols/negotiation/: README.md
protocols/tls/src/: connection.rs  handshake.rs  tls_session.rs
py/: README.md
py/python_ffi/: Cargo.toml
py/python_ffi/examples/: testin_binding.py
py/python_ffi/src/: lib.rs
security/data_encryption/src/encryption/: aes_symmetric.rs
utilities/api_utils/: Cargo.toml
utilities/api_utils/src/: api_error.rs  api_trait.rs  lib.rs
