[package]
name = "api_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
nautilus_core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"

# HTTP Server & Client
hyper = { version = "1.6.0", features = ["full"] }
axum = { version = "0.8.1", features = ["full"] }
