[package]
name = "api_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = {version = "0.1.86"}
serde_json = "1"
thiserror = "2.0.11"

# HTTP Server & Client
hyper = { version = "1.6.0" }
axum = { version = "0.8.1" }
